<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ontouml</groupId>
    <artifactId>ontouml4j</artifactId>
    <version>0.1.1</version>
    <name>OntoUML4j</name>
    <description>
        🪐 A Java library for OntoUML modeling.
    </description>
    <url>https://github.com/OntoUML/ontouml4j</url>
    <inceptionYear>2025</inceptionYear>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <plugin.publishing.version>0.6.0</plugin.publishing.version>
        <plugin.javadoc.version>3.10.1</plugin.javadoc.version>
        <plugin.source.version>3.3.1</plugin.source.version>
        <plugin.gpg.version>3.2.7</plugin.gpg.version>
    </properties>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/OntoUML/ontouml4j.git</connection>
        <developerConnection>scm:git:ssh://github.com/OntoUML/ontouml4j.git</developerConnection>
        <url>https://github.com/OntoUML/ontouml4j</url>
    </scm>

    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.4.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.truth</groupId>
            <artifactId>truth</artifactId>
            <version>1.4.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.truth.extensions</groupId>
            <artifactId>truth-java8-extension</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.erosb</groupId>
            <artifactId>everit-json-schema</artifactId>
            <version>1.14.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${plugin.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- the following plugins are required for publishing to maven central -->
            <!-- https://central.sonatype.org/publish/publish-portal-maven/ -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${plugin.publishing.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <!-- visit https://central.sonatype.com/publishing/deployments to publish manually -->
                    <!-- also visit that site to debug validation issues -->
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
            <!-- https://central.sonatype.org/publish/publish-maven/#gpg-signed-components -->
            <!-- https://maven.apache.org/plugins/maven-gpg-plugin/usage.html -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${plugin.gpg.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <bestPractices>true</bestPractices>
                            <!-- set gpg.keyname via command line if necessary (default: first found) -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <organization>
        <name>OntoUML</name>
        <url>https://ontouml.org/</url>
    </organization>
    <developers>
        <developer>
            <name>Matheus Lenke Coutinho</name>
            <id>matheuslenke</id>
            <email>matheuslenke(AT)gmail(DOT)com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>-3</timezone>
            <url>https://github.com/matheuslenke</url>
            <organization>UFES</organization>
            <organizationUrl>https://ufes.br</organizationUrl>
        </developer>
    </developers>
</project>